HTML CSS test 1

--- a/index.html
+++ b/index.html
@@ -3,7 +3,66 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
+    <title>Wireframe Layout</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header></header>
+      <div class="sub-bar"></div>
+
+      <div class="hero box-1"></div>
+      <div class="hero box-2"></div>
+
+      <div class="section-heading"></div>
+
+      <section class="grid clearfix">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </section>
+
+      <div class="section-heading-2"></div>
+
+      <section class="content clearfix">
+        <div class="column">
+          <div class="title"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+        </div>
+        <div class="column">
+          <div class="title"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+        </div>
+        <div class="column">
+          <div class="title"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+        </div>
+      </section>
+
+      <div class="mid-heading"></div>
+
+      <section class="stack">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div class="big"></div>
+      </section>
+
+      <div class="buttons clearfix">
+        <div></div>
+        <div></div>
+      </div>
+
+      <div class="footer fbox-1"></div>
+      <div class="footer fbox-2"></div>
+    </div>
+  </body>
 </html>
